--- a/styles/landing.css
+++ b/styles/landing.css
@@ -336,3 +336,421 @@ p#review-comment {
     font-size: 11px;
     font-weight: 500;
 }
+
+.responsive {
+    display: none;
+}
+
+@media only screen and (max-width: 1290px) {
+#landing-header {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background: #F5FDFF;
+    width: 100vw;
+    height: 67px;
+}
+
+#landing-header img {
+    width: 136px;
+    margin-left: 20px;
+    height: 23.47px;
+    transition: all 0.5s ease-in-out;
+}
+
+#landing-header nav {
+    margin: 0 120px;
+}
+
+}
+
+@media only screen and (max-width: 1160px) {
+
+#landing-header nav {
+    margin: 0;
+}
+
+.landing-main-info > img {
+    width: 291px;
+    height: 201px;
+    object-fit:contain;
+    margin-top: 100px;
+    margin-left: 100px;
+}
+}
+
+@media only screen and (max-width: 1060px) {
+
+#landing-header nav {
+    margin: 0;
+}
+
+.landing-main-info > img {
+    width: 201px;
+    height: 201px;
+    object-fit:contain;
+    margin-top: 100px;
+    margin-left: 180px;
+}
+}
+
+@media only screen and (max-width: 1000px) {
+
+.landing-main-info > img {
+    width: 391px;
+    height: 301px;
+    object-fit:contain;
+    margin-top: 100px;
+    margin-left: 0px;
+}
+
+#landing-boxes {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    background: rgba(174, 204, 255, 0.1);
+    border: 1px solid rgba(174, 204, 255, 0.5);
+    border-radius: 10px;
+    width: 370px;
+    height: 352px;
+}
+
+.box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    /* margin: 0 10px; */
+}
+
+.box-line {
+    display: none;
+}
+
+#review-container {
+    display: flex;
+    position: absolute;
+    width: 393px;
+    height: 101px;
+    right: 10px;
+    bottom: -10rem;
+    background: rgba(234, 242, 255, 0.1);
+    border: 1px solid rgba(174, 204, 255, 0.5);
+    border-radius: 110px;
+}
+
+#review-image-div {
+    display: flex;
+    height: 100%;
+    width: 100px;
+    padding: 10px;
+}
+
+#review-image-div img{
+    height: 100%;
+    width: 80px;
+    border-radius: 50px;
+    object-fit: cover;
+}
+
+img#stars {
+    width: 73px;
+    height: 13.9px;
+    margin-right: 4px;
+}
+
+#review-author {
+    font-family: mont-heavy;
+    font-size: 12px;
+    color: #787979;
+}
+
+#review-verified {
+    font-family: mont-heavy;
+    font-size: 11px;
+    font-weight: 500;
+    color: #197AFF;
+    margin-top: 2px;
+    margin-left: 2px;
+}
+
+}
+
+@media only screen and (max-width: 960px) {
+#landing-header nav a {
+    font-size: 12px;
+}
+.landing-main-info > img {
+    width: 291px;
+    height: 201px;
+    object-fit:contain;
+    margin-top: 200px;
+    margin-left: 10px;
+}
+
+#additional-main-button {
+    width: 308px;
+    height: 63px;
+    background: #197AFF;
+    border: none;
+    color: #FFFFFF;
+    font-family: mont-light;
+    font-weight: 800;
+    text-align: center;
+    font-size: 14px;
+    border-radius: 60px;
+    transition: all 0.4s ease-in-out;
+    margin-top: 50px;
+}
+
+#additional-secondary-button {
+    width: 255px;
+    height: 34px;
+    background: rgba(77, 145, 207, 0.15);
+    box-shadow: 0px 0px 14px #FFFFFF;
+    border: none;
+    border-radius: 30px;
+    font-family: mont-light;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 15px;
+    text-align: center;
+    color: #000000;
+    margin-left: 12px;
+    margin-top: 28px;
+    transition: all 0.4s ease-in-out;
+}
+}
+
+@media only screen and (max-width: 840px) {
+#landing-header nav {
+    display: none;
+}
+#landing-header button {
+    display: none;
+}
+
+#landing-header {
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#landing-h1 {
+    font-size: 29px;
+    width: 18rem;
+    font-weight: 700;
+    margin-left: 100px;
+    text-transform: lowercase;
+}
+
+#landing-h1 span {
+    color: #197AFF;
+    font-family: mont-heavy;
+}
+
+#landing-arrow-icon {
+    display: none;
+}
+
+.responsive {
+    display: block;
+    height: 10rem;
+    width: auto;
+    margin-top: 3.3rem;
+    margin-left: 2rem;
+}
+
+.landing-main-info > img {
+    display: none;
+}
+
+#landing-mainTextAndBoxes {
+    width: 70vw;
+    margin-left: 0;
+}
+
+body {
+    background: #f5fdff;
+}
+
+#landing-mainText {
+    font-family: mont-light;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 28px;
+    color: #262626;
+    margin: 30px 0;
+}
+
+#landing-boxes {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: baseline;
+    background: transparent;
+    border: none;
+    border-radius: 10px;
+    width: 100%;
+    height: 92px;
+}
+
+.box {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items:center;
+    text-align: center;
+    margin: -15px 2px;
+    width: 120px;
+}
+
+.box p {
+    display: none;
+}
+
+.box-header {
+    font-size: 17px;
+}
+
+#additional-main-button {
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.landing-main-info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#additional-secondary-button {
+    margin: 10px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#review-div {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#review-container {
+    display: flex;
+    position:relative;
+    width: 393px;
+    height: 101px;
+    right: 0;
+    bottom: 0;
+    margin-top: 20px;
+    background: rgba(234, 242, 255, 0.1);
+    border: 1px solid rgba(174, 204, 255, 0.5);
+    border-radius: 110px;
+}
+
+#review-image-div {
+    display: flex;
+    height: 100%;
+    width: 100px;
+    padding: 10px;
+}
+
+#review-image-div img{
+    height: 100%;
+    width: 80px;
+    border-radius: 50px;
+    object-fit: cover;
+}
+
+}
+
+@media only screen and (max-width: 720px) {
+.responsive {
+    display: block;
+    height: 8rem;
+    width: 8rem;
+    object-fit: contain;
+    margin-top: 3.3rem;
+    margin-left: 1rem;
+}
+
+.box {
+    width: 100px;
+}
+}
+
+@media only screen and (max-width: 600px) {
+    .box {
+            width: 70px;
+            margin: 0 10px;
+    }
+
+
+    .responsive {
+        height: 9rem;
+        width: 9rem;
+        object-fit: contain;
+        margin-top: 4.3rem;
+        margin-left: 0rem;
+        margin-right: 20px;
+    }
+
+    .flex-row {
+        /* width: 100vw; */
+        justify-content: space-between;
+    }
+
+    #landing-h1 {
+        margin-left: 20px;
+    }
+
+    #landing-boxes {
+    margin-bottom: 3rem;
+}
+}
+
+@media only screen and (max-width: 600px) {
+    .box-header {
+        font-size: 15px;
+    }
+
+    .box {
+        width: 100px;
+        height: auto;
+        margin: 0;
+    }
+
+    #landing-mainTextAndBoxes {
+        width: 100vw;
+        padding: 0 10px;
+    }
+
+}
+
+@media only screen and (max-width: 400px) {
+    .box-header {
+        font-size: 10px;
+    }
+
+    .box {
+        width: 80px;
+        height: auto;
+        margin: 0;
+    }
+
+    #landing-boxes {
+        margin-bottom: 1rem;
+    }
+}
