--- a/styles/offers.css
+++ b/styles/offers.css
@@ -41,14 +41,14 @@ body {
     justify-content: space-between;
 }
 
-#offers-main-div {
+.offers-main-div {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
 }
 
-#offers-main-div p {
+.offers-main-div p {
     font-family: mont-light;
     font-style: normal;
     font-weight: 800;
@@ -106,7 +106,7 @@ body {
 #cards {
     display: flex;
     justify-content: center;
-    margin-right: 20px;
+    /* margin-right: 20px; */
     margin-bottom: 5rem;
 }
 
@@ -558,4 +558,99 @@ body {
     width: auto;
     object-fit: contain;
     margin-bottom: 4rem;
+}
+
+.none {
+    display: none;
+}
+
+@media only screen and (max-width: 1200px) {
+    #cards {
+        flex-wrap: wrap;
+    }
+
+    .card {
+        margin-bottom: 4rem;
+        margin-right: 2.1rem;   
+    }
+}
+
+@media only screen and (max-width: 1000px) {
+    .responsive-none {
+        display: none !important;
+    }
+
+    .card:nth-of-type(2) {
+        margin-right: 0;
+    }
+}
+
+@media only screen and (max-width: 784px) {
+    .offers-main-div {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        flex-direction: column !important;
+    }
+
+    .offers-main-div p {
+        width: 100% !important;
+    }
+    
+    .offers-main-div p {
+        font-family: mont-light;
+        font-style: normal;
+        font-weight: 800;
+        font-size: 16px;
+        color: #FFFFFF;
+        width: 20rem;
+        text-align: center;
+    }
+
+    #shipping-hide {
+        display: none;
+    }
+
+    .none {
+        display: block;
+    }
+
+    * {
+        border: 1px solid red;
+    }
+
+    .card:nth-of-type(2) {
+        margin-right: 2rem;
+        margin-left: 2rem;
+    }
+
+    .card:nth-of-type(1) {
+        margin-right: 2rem;
+        margin-left: 2rem;
+    }
+}
+
+@media only screen and (max-width: 614px) {
+    #offers-top {
+        width: 100%;
+        height: 120px;
+        background: #11346F;
+        backdrop-filter: blur(4px);
+        display: flex;
+        align-items:baseline;
+        justify-content: space-between;
+}
+}
+
+@media only screen and (max-width: 444px) {
+    #offers-header h1 {
+        font-size: 26px;
+    }
+
+    .card {
+        margin: 0;
+        margin-bottom: 4rem !important;
+    }
+
 }
